# locomo-benchmark-eval

./: .env.example  .gitignore  README.md  README_zh.md  download_gguf.sh  pyproject.toml
data/: questions.txt
data/chat_logs/: locomo_questions.txt  sample_chat.txt
data/evaluation/: e2e_qa_test.json  mem0_test.txt  qa_test.txt
openclaw_mem_import/: __init__.py  cli.py  daft_prompt.py  distill_prompts.py  embedder.py  pipeline.py  search.py  vector_store.py
results/: openclaw_eval_full.json  openclaw_eval_scored.json
scripts/: calc_score.py  eval_agent_openclaw.sh  ingest_doubao.sh  ingest_local_bge.sh  init_lancedb.py  inspect_lancedb.py  judge_openclaw.sh
src/: __init__.py
src/adapters/: embedder.py  vector_store.py
src/cli/: main.py
src/core/: daft_runner.py  locomo_utils.py  models.py  openclaw_client.py  pipeline.py  search.py  udfs.py
src/core/memory_plugins/: base.py  lancedb.py  registry.py
src/core/prompts/: extraction.py  judge.py  qa.py
tests/: run_demo.py
