[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locomo_eval"
version = "0.1.0"
description = "Universal Memory Import & Evaluation CLI for the OpenClaw ecosystem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "daft[dataframe]>=0.3.0",
  "lancedb>=0.7.0",
  "typer[all]>=0.9.0",
  "pydantic>=2.6.0",
  "openai>=1.6.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
locomo_eval = "src.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
